# mcp-cpp-claude

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  install.ps1  install.sh
include/: handledb.hpp  mcp_handler.hpp  server.hpp  system_tools.hpp
src/: CMakeLists.txt  editorTools.cpp  handledb.cpp  main.cpp  mcp_handler.cpp  server.cpp  system_tools.cpp
